View con difrentes framewordk
jade y handelbars pruebas

--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
-	"name": "library",
-	"version": "1.0.0",
-	"description": "Prueba de nodejs por leogatgens",
-	"main": "app.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node app.js"
-	},
-	"engines": {
-		"node": "4.4.4"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/leogatgens/Leo-NodeJs-Angular.git"
-	},
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/leogatgens/Leo-NodeJs-Angular/issues"
-	},
-	"homepage": "https://github.com/leogatgens/Leo-NodeJs-Angular",
-	"dependencies": {
-		"express": "^4.13.4"
-	},
-	"devDependencies": {
-		"gulp": "^3.9.1",
-		"gulp-inject": "^4.0.0",
-		"gulp-jscs": "^3.0.2",
-		"gulp-jshint": "^2.0.1",
-		"gulp-nodemon": "^2.0.7",
-		"jshint": "^2.9.2",
-		"jshint-stylish": "^2.2.0",
-		"wiredep": "^4.0.0"
-	}
+  "name": "library",
+  "version": "1.0.0",
+  "description": "Prueba de nodejs por leogatgens",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": "4.4.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leogatgens/Leo-NodeJs-Angular.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/leogatgens/Leo-NodeJs-Angular/issues"
+  },
+  "homepage": "https://github.com/leogatgens/Leo-NodeJs-Angular",
+  "dependencies": {
+    "express": "^4.13.4",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.5",
+    "jade": "^1.11.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-inject": "^4.0.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.1",
+    "gulp-nodemon": "^2.0.7",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
+    "wiredep": "^4.0.0"
+  }
 }
